# flatcrawl-crawlers

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.toml
src/: configuration.rs  crawlers.rs  geocode.rs  main.rs  models.rs
src/crawlers/: config.rs  crawler.rs  executor.rs  immoscout.rs  immowelt.rs  mod.rs  sueddeutsche.rs  wggesucht.rs  wohnungsboerse.rs
src/models/: cities.rs  city.rs  encodings.rs  flat.rs  mod.rs
