[package]
name = "flatcrawl-crawler"
version = "1.0.0"
authors = ["Florian Schnell <floschnell@gmail.com>"]

[dependencies]
kuchiki = {version = "0.7.2"}
reqwest = {version = "0.8.8"}
regex = "1.1.0"
chrono = "0.4.6"
lapin-futures = "0.14.0"
tokio = "=0.1.8"
futures = "0.1.25"
serde_json = "1.0.33"
serde = "1.0.81"
serde_derive = "1.0.81"
dns-lookup = "0.9.1"
config = "0.9.1"
url = "1.7.2"
encoding_rs = "0.8.13"