[package]
name = "flatcrawl-crawler"
version = "1.0.0"
authors = ["Florian Schnell <floschnell@gmail.com>"]
edition = "2018"

[dependencies]
kuchiki = {version = "0.7.2"}
reqwest = {version = "0.9.11"}
regex = "1.1.2"
chrono = "0.4.6"
lapin-futures = "0.18.0"
tokio = "0.1.16"
futures = "0.1.25"
serde_json = "1.0.39"
serde = "1.0.89"
serde_derive = "1.0.89"
dns-lookup = "1.0.0"
config = "0.9.2"
url = "1.7.2"
encoding_rs = "0.8.17"
failure = "0.1.5"