[package]
name = "flatcrawl-crawler"
version = "1.0.0"
authors = ["Florian Schnell <floschnell@gmail.com>"]
edition = "2018"

[dependencies]
kuchiki = {version = "0.7.3"}
reqwest = {version = "0.9.21"}
regex = "1.3.1"
chrono = "0.4.9"
lapin-futures = "0.28.0"
tokio = "0.1.22"
futures = "0.1.29"
serde_json = "1.0.40"
serde = "1.0.101"
serde_derive ="1.0.101"
config = "0.9.3"
url = "2.1.0"
encoding_rs = "0.8.20"
failure = "0.1.5"